feat(events): add date range and dance style filters to public city events endpoint
- Update EventsService interface to accept fromTime, toTime, and danceStyleSlugs parameters
- Add repository query for filtering by date overlap and dance styles
- Add controller test for passing date and style query parameters
- Add repository test for public event IDs with date and style filters
- Update API documentation with new query parameters